--- a/Weather/Resources/Base.lproj/Main.storyboard
+++ b/Weather/Resources/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="AEf-pb-nlI">
+                            <searchBar contentMode="redraw" placeholder="Your City Name" translatesAutoresizingMaskIntoConstraints="NO" id="AEf-pb-nlI">
                                 <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -40,44 +41,46 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="City Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ec2-xs-8hk">
-                                                    <rect key="frame" x="21" y="31" width="346" height="76"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
+                                                    <rect key="frame" x="21" y="31" width="346" height="80"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WnF-At-b5M">
-                                                    <rect key="frame" x="21" y="115" width="125" height="62"/>
+                                                    <rect key="frame" x="21" y="115" width="84" height="62"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="62" id="yAZ-V4-hEt"/>
+                                                        <constraint firstAttribute="height" constant="62" id="Fde-EU-Kra"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="62" id="G9i-sy-BFd"/>
+                                                        <constraint firstAttribute="width" constant="84" id="hYM-Pf-RnI"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.8 C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgB-8e-6SW">
-                                                    <rect key="frame" x="208" y="123" width="100" height="47"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="39"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gr8-Tn-nDO">
+                                                    <rect key="frame" x="31" y="193.5" width="287" height="43.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gr8-Tn-nDO">
-                                                    <rect key="frame" x="31" y="198" width="287" height="38.5"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.8 C" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgB-8e-6SW">
+                                                    <rect key="frame" x="146" y="127" width="200" height="38.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Gr8-Tn-nDO" firstAttribute="leading" secondItem="oPt-i2-tuF" secondAttribute="leading" constant="31" id="6An-PC-tJN"/>
-                                                <constraint firstItem="WnF-At-b5M" firstAttribute="centerY" secondItem="dgB-8e-6SW" secondAttribute="centerY" id="9Qv-Qh-q2z"/>
+                                                <constraint firstItem="WnF-At-b5M" firstAttribute="top" secondItem="oPt-i2-tuF" secondAttribute="top" constant="115" id="9pB-RZ-q9s"/>
                                                 <constraint firstItem="Ec2-xs-8hk" firstAttribute="leading" secondItem="oPt-i2-tuF" secondAttribute="leading" constant="21" id="G0d-gj-DMw"/>
                                                 <constraint firstAttribute="trailing" secondItem="Gr8-Tn-nDO" secondAttribute="trailing" constant="57" id="HfV-Hj-cXz"/>
-                                                <constraint firstItem="dgB-8e-6SW" firstAttribute="top" secondItem="Ec2-xs-8hk" secondAttribute="bottom" constant="16" id="UMb-ih-Eey"/>
-                                                <constraint firstItem="Gr8-Tn-nDO" firstAttribute="top" secondItem="dgB-8e-6SW" secondAttribute="bottom" constant="28" id="XcI-RP-93I"/>
-                                                <constraint firstItem="WnF-At-b5M" firstAttribute="top" secondItem="oPt-i2-tuF" secondAttribute="top" constant="115" id="ZAy-VH-Uc5"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dgB-8e-6SW" secondAttribute="trailing" constant="21" id="IsN-rO-YJv"/>
+                                                <constraint firstItem="dgB-8e-6SW" firstAttribute="top" secondItem="Ec2-xs-8hk" secondAttribute="bottom" constant="16" id="NuC-qe-ykK"/>
+                                                <constraint firstItem="Gr8-Tn-nDO" firstAttribute="top" secondItem="dgB-8e-6SW" secondAttribute="bottom" constant="28" id="XFn-Lz-ols"/>
                                                 <constraint firstItem="Ec2-xs-8hk" firstAttribute="top" secondItem="oPt-i2-tuF" secondAttribute="top" constant="31" id="cXI-5a-568"/>
+                                                <constraint firstItem="dgB-8e-6SW" firstAttribute="centerY" secondItem="WnF-At-b5M" secondAttribute="centerY" id="cZH-PX-OmU"/>
                                                 <constraint firstAttribute="bottom" secondItem="Gr8-Tn-nDO" secondAttribute="bottom" constant="18" id="d6g-rB-VTg"/>
+                                                <constraint firstItem="dgB-8e-6SW" firstAttribute="leading" secondItem="WnF-At-b5M" secondAttribute="trailing" constant="41" id="e6F-7d-LwG"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ec2-xs-8hk" secondAttribute="trailing" constant="8" id="ibg-fj-ELs"/>
-                                                <constraint firstItem="WnF-At-b5M" firstAttribute="leading" secondItem="Ec2-xs-8hk" secondAttribute="leading" id="vUS-dP-Gf1"/>
-                                                <constraint firstItem="dgB-8e-6SW" firstAttribute="leading" secondItem="WnF-At-b5M" secondAttribute="trailing" constant="62" id="yf4-FH-8nI"/>
-                                                <constraint firstAttribute="trailing" secondItem="dgB-8e-6SW" secondAttribute="trailing" constant="67.5" id="ziJ-Wj-sUe"/>
+                                                <constraint firstItem="WnF-At-b5M" firstAttribute="leading" secondItem="Ec2-xs-8hk" secondAttribute="leading" id="o3e-ne-q5Q"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -97,14 +100,14 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Weather Key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srm-DU-lo0">
                                                     <rect key="frame" x="29" y="16" width="142" height="37"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Weather Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSW-Ya-pM9">
-                                                    <rect key="frame" x="210" y="16" width="157" height="37"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Weather Value" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSW-Ya-pM9">
+                                                    <rect key="frame" x="204" y="16" width="145" height="37"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
